--- a/scrum/scrum.qmd
+++ b/scrum/scrum.qmd
@@ -4,3 +4,17 @@ title: "Scrum"
 ---
 
 # ¿Que es Scrum?
+
+Scrum es un proceso en el que se aplican de manera regular un conjunto de buenas prácticas para **trabajar colaborativamente, en equipo,** y obtener el mejor resultado posible de un proyecto. Estas prácticas se apoyan unas a otras y su selección tiene origen en un estudio de la manera de trabajar de equipos altamente productivos.
+
+En Scrum se realizan entregas parciales y regulares del producto final, priorizadas por el beneficio que aportan al receptor del proyecto. Por ello, Scrum está especialmente indicado para proyectos en **entornos complejos,** donde se necesita **obtener resultados pronto,** donde los **requisitos son cambiantes o poco definidos,** donde la **innovación, la competitividad, la flexibilidad y la productividad** son fundamentales.
+
+Scrum también se utiliza para resolver situaciones en que **no se está entregando al cliente lo que necesita,** cuando **las entregas se alargan demasiado,** los **costes se disparan o la calidad no es aceptable,** cuando se necesita capacidad de reacción ante la competencia, **cuando la moral de los equipos es baja y la rotación alta,** cuando es necesario identificar y solucionar ineficiencias sistemáticamente o cuando se quiere trabajar utilizando un **proceso especializado en el desarrollo de producto.**
+
+## El proceso
+
+*En Scrum un proyecto se ejecuta en ciclos temporales cortos y de duración fija*(iteraciones que normalmente son de 2 semanas, aunque en algunos equipos son de 3 y hasta 4 semanas, límite máximo de feedback de producto real y reflexión). Cada iteración tiene que proporcionar un resultado completo, un incremento de producto final que sea susceptible de ser entregado con el mínimo esfuerzo al cliente cuando lo solicite.
+
+El proceso parte de la lista de objetivos/requisitos priorizada del producto, que actúa como plan del proyecto. En esta lista **el cliente (Product Owner)** prioriza los objetivos balanceando el valor que le aportan respecto a su coste (que el equipo estima considerando la Definición de Hecho) y quedan repartidos en iteraciones y entregas.
+
+Las actividades que se llevan a cabo en Scrum son las siguientes *(los tiempos indicados son para iteraciones de 2 semanas):*
