--- a/quarto/quarto.qmd
+++ b/quarto/quarto.qmd
@@ -4,6 +4,8 @@ title: "Quarto"
 
 # ¿Que es Quarto?
 
+![](img/quarto.svg){width="20%"}
+
 Quarto Markdown es una forma de agregar formatos como encabezados, negritas, cursivas, listas… a un texto sin formato. En principio se creó como una alternativa a HTML más simple, y que gente sin mucho conocimiento de este lenguaje de programación pudiese crear páginas web. Pero con el tiempo, se convirtió en un sistema de escritura minimalista con el que poder escribir sin muchas preocupaciones, y que puede ser exportados a otros sitios con facilidad.
 
 Al tener una sintaxis más simple que HTML, es mucho más sencillo de aprender. No hay que preocuparse por ir abriendo y cerrando tags. Y como no tiene los típicos menús contextuales de los editores de texto clásicos, se puede escribir en un entorno con menos distracciones. Ideal para aquellos que pasan mucho de su tiempo escribiendo textos.
