--- a/scrum/scrum.qmd
+++ b/scrum/scrum.qmd
@@ -3,6 +3,8 @@ title: "Scrum"
 
 ---
 
+![](img/scrum.svg){width="15%"}
+
 # ¿Que es Scrum?
 
 Scrum es un proceso en el que se aplican de manera regular un conjunto de buenas prácticas para **trabajar colaborativamente, en equipo,** y obtener el mejor resultado posible de un proyecto. Estas prácticas se apoyan unas a otras y su selección tiene origen en un estudio de la manera de trabajar de equipos altamente productivos.
